# FlowOss

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
apps/cli/: Cargo.toml
apps/cli/src/: daemon.rs  main.rs
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/src/: download.rs  engine.rs  hotkey.rs  hotkey_linux.rs  hotkey_stub.rs  hotkey_windows.rs  main.rs  settings.rs  socket.rs
apps/desktop/ui/: overlay.html  settings.html
crates/assist/: Cargo.toml
crates/assist/examples/: ask.rs  probe.rs
crates/assist/src/: lib.rs  search.rs
crates/audio/: Cargo.toml
crates/audio/src/: feedback.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: ipc.rs  lib.rs
crates/insertion/: Cargo.toml
crates/insertion/examples/: clipboard_roundtrip.rs  paste_demo.rs  read_clipboard.rs
crates/insertion/src/: lib.rs  platform_linux.rs  platform_stub.rs  platform_windows.rs
crates/stt/: Cargo.toml
crates/stt/src/: lib.rs  streaming.rs
crates/text_cleanup/: Cargo.toml
crates/text_cleanup/src/: lib.rs
crates/vad/: Cargo.toml
crates/vad/src/: lib.rs
docs/: flowoss-prd.md
packaging/: flowoss-daemon.service
packaging/windows/: README.txt
scripts/: download-models.ps1  download-models.sh  gen-icon.py  install-service.sh  package-windows.ps1
