[package]
name = "flowoss-insertion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arboard = { version = "3.6", default-features = false, features = ["wayland-data-control"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xtest"] }
