[package]
name = "flowoss-insertion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3.6", default-features = false, features = ["wayland-data-control"] }
x11rb = { version = "0.13", features = ["xtest"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = "3.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
